`pnpm codegen:all` outpu
